<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.bomb.parkourbeat</groupId>
    <artifactId>ParkourBeat</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>ParkourBeat</name>

    <properties>
        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <annotationProcessorPaths>
                        <path> <!-- <annotationProcessorPath> -->
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.30</version>
                        </path> <!-- </annotationProcessorPath> -->
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
              <groupId>com.diffplug.spotless</groupId>
              <artifactId>spotless-maven-plugin</artifactId>
              <version>2.43.0</version>
              <configuration>
                <java>
                  <includes>
                    <include>src/main/java/**/*.java</include>
                    <include>src/test/java/**/*.java</include>
                  </includes>
                  <palantirJavaFormat>
                    <style>PALANTIR</style>
                  </palantirJavaFormat>
                    <indent><spaces>true</spaces></indent>
                  <removeUnusedImports />
                  <formatAnnotations />
                </java>
              </configuration>
              <executions>
                <execution>
                    <goals>
                      <goal>apply</goal>
                    </goals>
                  <phase>validate</phase>
                </execution>
              </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>paper-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>is-snapshots</id>
            <url>https://repo.infernalsuite.com/repository/maven-snapshots/</url>
        </repository>
        <repository>
            <id>glaremasters</id>
            <url>https://repo.glaremasters.me/repository/concuncan/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.destroystokyo.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.16.5-R0.1-SNAPSHOT</version> <!-- 1.12.2-R0.1-SNAPSHOT -->
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.1.0</version>
        </dependency>
        <dependency>
            <groupId>me.bomb</groupId>
            <artifactId>amusic</artifactId>
            <version>0.12</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/AMusic_v0.12.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.grinderwolf</groupId>
            <artifactId>slimeworldmanager-api</artifactId>
            <version>2.2.1</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>
